# mdrive

./: MDV QL Sector Data Analysis.docx  README.md
PCBs/: PicoDrive.kicad_pcb  PicoDrive.kicad_prl  PicoDrive.kicad_pro  PicoDrive.kicad_sch
PCBs/buffer/: TrackBuffer.kicad_pcb  TrackBuffer.kicad_prl  TrackBuffer.kicad_pro  TrackBuffer.kicad_sch
microdrive/: CMakeLists.txt  hw_config.c  main.c
